# rustbook

./: .gitignore  Cargo.toml  README.md
ch01/ch02/ch_2_guessing_game/: Cargo.toml
ch02/ch02_guessing_game/src/: main.rs
ch02/ch_2_guessing_game/src/: main.rs
ch03/ch03_07_return_val/: Cargo.toml
ch03/ch03_07_return_val/src/: main.rs
ch03/ch03_10_while_expr/: Cargo.toml
ch03/ch03_10_while_expr/src/: main.rs
ch03/ch03_11_for_expr/: Cargo.toml
ch03/ch03_11_for_expr/src/: main.rs
ch03/ch03_1_varsnmut/: Cargo.toml
ch03/ch03_2_constants/src/: main.rs
ch03/ch03_3_shadowing/src/: main.rs
ch03/ch03_4_datatypes/src/: main.rs
ch03/ch03_6_expr_v_stat/: Cargo.toml
ch03/ch03_6_expr_v_stat/src/: main.rs
ch03/ch03_8_if_expr/src/: main.rs
ch03/ch03_9_loop_expr/: Cargo.toml
ch03/ch03_9_loop_expr/src/: main.rs
ch04/ch04_10_slice/src/: main.rs
ch04/ch04_11_first_word/src/: main.rs
ch04/ch04_1_string_ex/: Cargo.toml
ch04/ch04_1_string_ex/src/: main.rs
ch04/ch04_2_move_string/: Cargo.toml
ch04/ch04_2_move_string/src/: main.rs
ch04/ch04_3_own_fn/: Cargo.toml
ch04/ch04_3_own_fn/src/: main.rs
ch04/ch04_4_ret_val_scope/: Cargo.toml
ch04/ch04_4_ret_val_scope/src/: main.rs
ch04/ch04_5_ret_ref/: Cargo.toml
ch04/ch04_5_ret_ref/src/: main.rs
ch04/ch04_6_mut_ref/src/: main.rs
ch04/ch04_7_mut_refs/: Cargo.toml
ch04/ch04_7_mut_refs/src/: main.rs
ch04/ch04_8_mut_n_non/: Cargo.toml
ch04/ch04_8_mut_n_non/src/: main.rs
ch04/ch04_9_dang_ref/: Cargo.toml
ch04/ch04_9_dang_ref/src/: main.rs
ch05/ch05_1_structs/src/: main.rs
ch05/ch05_2_rectangles/src/: main.rs
ch05/ch05_3_methods/src/: main.rs
ch05/ch05_4_more_params/: Cargo.toml
ch05/ch05_4_more_params/src/: main.rs
ch06/ch06_1_enums/src/: main.rs
ch06/ch06_2_msg_enum/: Cargo.toml
ch06/ch06_2_msg_enum/src/: main.rs
ch06/ch06_3_option_enum/src/: main.rs
ch06/ch06_4_match/: Cargo.toml
ch06/ch06_4_match/src/: main.rs
ch06/ch06_5_match_opt/: Cargo.toml
ch06/ch06_5_match_opt/src/: main.rs
ch06/ch06_6_match_dice/: Cargo.toml
ch06/ch06_6_match_dice/src/: main.rs
ch06/ch06_7_iflet/src/: main.rs
ch07/ch07_1_restaurant/src/: lib.rs
ch07/ch07_4_pub_use/: Cargo.toml
ch07/ch07_5_use_rand/: Cargo.toml
ch07/ch07_6_mod_files/: Cargo.toml
ch10/ch10_1_extract_fn/: Cargo.toml
ch13/ch13_4_closure_env/: Cargo.toml
ch15/ch15_5a_ref_cell/: Cargo.toml
ch15/ch15_5b_ref_cell/: Cargo.toml
ch15/ch15_6a_prev_ref_cycle/: Cargo.toml
ch16/ch16_1a_move_closures/: Cargo.toml
ch16/ch16_2a_mult_vals/: Cargo.toml
ch16/ch16_3a_share_mutex/: Cargo.toml
ch17/ch17_1_avg_coll/: Cargo.toml
ch17/ch17_3_state_pattern/: Cargo.toml
ch18/ch18_1a_if_let_expr/: Cargo.toml
ch18/ch18_1c_for_loop_pattern/: Cargo.toml
ch19/ch19_4_adv_funcs_closures/: Cargo.toml
(+50 files in other folders)
