[workspace]
members = [
    "ch01/ch1_3_hello_cargo",
    "ch02/ch02_guessing_game",
    "ch03/ch03_1_varsnmut",
    "ch03/ch03_2_constants",
    "ch03/ch03_3_shadowing",
    "ch03/ch03_4_datatypes",
    "ch03/ch03_5_functions",
    "ch03/ch03_6_expr_v_stat",
    "ch03/ch03_7_return_val",
    "ch03/ch03_8_if_expr",
    "ch03/ch03_9_loop_expr",
    "ch03/ch03_10_while_expr",
    "ch03/ch03_11_for_expr"
]
default-members = [
    "ch03/ch03_11_for_expr"
]
resolver = "2"
