[workspace]
members = [
    "ch01/ch1_3_hello_cargo",
    "ch02/ch02_guessing_game",
    "ch03/ch03_1_varsnmut",
    "ch03/ch03_2_constants",
    "ch03/ch03_3_shadowing",
    "ch03/ch03_4_datatypes",
    "ch03/ch03_5_functions",
    "ch03/ch03_6_expr_v_stat",
    "ch03/ch03_7_return_val",
    "ch03/ch03_8_if_expr",
    "ch03/ch03_9_loop_expr",
    "ch03/ch03_10_while_expr",
    "ch03/ch03_11_for_expr",
    "ch04/ch04_1_string_ex",
    "ch04/ch04_2_move_string",
    "ch04/ch04_3_own_fn",
    "ch04/ch04_4_ret_val_scope",
    "ch04/ch04_5_ret_ref",
    "ch04/ch04_6_mut_ref",
    "ch04/ch04_7_mut_refs",
    "ch04/ch04_8_mut_n_non"
]
default-members = [
    "ch04/ch04_8_mut_n_non"
]
resolver = "2"
