[workspace]
members = [
    "ch01/ch1_3_hello_cargo",
    "ch02/ch02_guessing_game",
    "ch03/ch03_1_varsnmut",
    "ch03/ch03_2_constants",
    "ch03/ch03_3_shadowing",
    "ch03/ch03_4_datatypes",
    "ch03/ch03_5_functions",
    "ch03/ch03_6_expr_v_stat",
    "ch03/ch03_7_return_val",
    "ch03/ch03_8_if_expr",
    "ch03/ch03_9_loop_expr",
    "ch03/ch03_10_while_expr",
    "ch03/ch03_11_for_expr",
    "ch04/ch04_1_string_ex",
    "ch04/ch04_2_move_string",
    "ch04/ch04_3_own_fn",
    "ch04/ch04_4_ret_val_scope",
    "ch04/ch04_5_ret_ref",
    "ch04/ch04_6_mut_ref",
    "ch04/ch04_7_mut_refs",
    "ch04/ch04_8_mut_n_non",
    "ch04/ch04_9_dang_ref",
    "ch04/ch04_10_slice",
    "ch04/ch04_11_first_word",
    "ch05/ch05_1_structs",
    "ch05/ch05_2_rectangles",
    "ch05/ch05_3_methods",
    "ch05/ch05_4_more_params",
    "ch06/ch06_1_enums",
    "ch06/ch06_2_msg_enum",
    "ch06/ch06_3_option_enum",
    "ch06/ch06_4_match",
    "ch06/ch06_5_match_opt",
    "ch06/ch06_6_match_dice",
    "ch06/ch06_7_iflet",
    "ch07/ch07_1_restaurant",
    "ch07/ch07_2_backyard",
    "ch07/ch07_3_use",
    "ch07/ch07_4_pub_use",
    "ch07/ch07_5_use_rand",
    "ch07/ch07_6_mod_files",
    "ch08/ch08_1_vectors",
    "ch08/ch08_2_strings",
    "ch08/ch08_3_hashmaps",
    "ch09/ch09_1_panic",
    "ch09/ch09_2_result",
    "ch10/ch10_1_extract_fn",
    "ch10/ch10_2_generics",
    "ch10/ch10_3_traits"
]
default-members = [
    "ch10/ch10_3_traits"
]
resolver = "2"
